updated by prasad , for voter modifucation report pdf generation